--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="root">
       <div class="container0">
-        <img class="container" src="/rema.jpg" alt="" />
+        <img class="container" src="rema.jpg" alt="" />
         <h2 id="remy"><em>Mara</em></h2>
         <h3 id="remy">Rema</h3>
-        <audio id="audio" src="/Rema_-_Mara.mp3" controls loop></audio>
+        <audio id="audio" src="Rema_-_Mara.mp3" controls loop></audio>
       </div>
       <div id="lyrics">
         <p data-time="0">
